force-app/main/default/objects/GFH_Task__c/GFH_Task__c.object-meta.xml
<CustomObject>
    <label>Task</label>
    <pluralLabel>Tasks</pluralLabel>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>