force-app/main/default/objects/GFH_Task__c/fields/ActualHours__c.field-meta.xml
<CustomField>
    <fullName>ActualHours__c</fullName>
    <label>Actual Hours</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>2</scale>
</CustomField>