force-app/main/default/objects/GFH_Task__c/fields/AssigneeStudent__c.field-meta.xml
<CustomField>
    <fullName>AssigneeStudent__c</fullName>
    <label>Assignee Student</label>
    <type>Lookup</type>
    <referenceTo>GFH_Student__c</referenceTo>
    <relationshipName>AssigneeStudent</relationshipName>
    <relationshipLabel>Assignee Student</relationshipLabel>
</CustomField>