force-app/main/default/objects/GFH_Task__c/fields/EstimatedHours__c.field-meta.xml
<CustomField>
    <fullName>EstimatedHours__c</fullName>
    <label>Estimated Hours</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>2</scale>
</CustomField>