force-app/main/default/objects/GFH_Task__c/fields/LearningMetric_18__c.field-meta.xml
<CustomField>
    <fullName>LearningMetric_18__c</fullName>
    <label>Learning Metric 18</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>2</scale>
</CustomField>