force-app/main/default/objects/GFH_Task__c/fields/Sprint__c.field-meta.xml
<CustomField>
    <fullName>Sprint__c</fullName>
    <label>Sprint</label>
    <type>Lookup</type>
    <referenceTo>GFH_Sprint__c</referenceTo>
    <relationshipName>Sprint</relationshipName>
    <relationshipLabel>Sprint</relationshipLabel>
</CustomField>